--- a/src/styles/main-page-parts-list-brand.less
+++ b/src/styles/main-page-parts-list-brand.less
@@ -22,9 +22,9 @@ body {
                 .content1-description-title {
                     color: @color_black_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 12px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-size: @font-size_main + 10px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
                     word-spacing: 10px;
