--- a/src/styles/main-pagination.less
+++ b/src/styles/main-pagination.less
@@ -63,6 +63,7 @@ body {
                     }
                     a:hover div {
                         color: @color_white_main;
+                        font-family: 'Roboto', sans-serif;
                         font-size: @font-size_main + 1px;
                         font-weight: 500;
                         transition: linear 0.2s;  
