--- a/src/styles/media-footer.less
+++ b/src/styles/media-footer.less
@@ -1,5 +1,6 @@
 
-@media all and (max-width: 598px) {
+@media (min-width: 540px) and (max-width: 760px) {
+    @font-size_main: 15px;
     body {
         .footer{ 
             .container {
@@ -8,29 +9,85 @@
                     padding: 5px 10px;   
                 }
                 .box h4 {
-                    font-size: @font-size_main;
+                    font-size: @font-size_main + 2px;
                 }
                 .box p {
-                    font-size: @font-size_main - 2px;
+                    font-size: @font-size_main;
                 }
-                .box a {
-                    font-size: @font-size_main - 3px;
+                .box .social a {
+                    font-size: @font-size_main;
                 } 
+                .box .social a i {
+                    font-size: @font-size_main + 10px;
+                }
                 .box .address a {
-                    font-size: @font-size_main - 1px;
+                    font-size: @font-size_main;
+                } 
+                .box .address a i {
+                    font-size: @font-size_main + 10px;
+                }  
+                .box .address a {
+                    font-size: @font-size_main;
                 }
                 .box form input, .box form textarea {
-                    font-size: @font-size_main - 2px;
+                    font-size: @font-size_main;
                 } 
                 .box form label {
-                    font-size: @font-size_main - 2px;
+                    font-size: @font-size_main;
                 }
                 .box form button {
-                    font-size: @font-size_main - 3px;
+                    font-size: @font-size_main;
                 }     
             }
             .author {
-                font-size: @font-size_main - 3px;
+                font-size: @font-size_main;
+            }
+        }
+    }
+}
+
+@media all and (max-width: 539px) {
+    @font-size_main: 13px;
+    body {
+        .footer{ 
+            .container {
+                .box {
+                    margin: 0px 0px;
+                    padding: 5px 10px;   
+                }
+                .box h4 {
+                    font-size: @font-size_main + 2px;
+                }
+                .box p {
+                    font-size: @font-size_main;
+                }
+                .box .social a {
+                    font-size: @font-size_main;
+                } 
+                .box .social a i {
+                    font-size: @font-size_main + 10px;
+                }
+                .box .address a {
+                    font-size: @font-size_main;
+                } 
+                .box .address a i {
+                    font-size: @font-size_main + 10px;
+                }  
+                .box .address a {
+                    font-size: @font-size_main;
+                }
+                .box form input, .box form textarea {
+                    font-size: @font-size_main;
+                } 
+                .box form label {
+                    font-size: @font-size_main;
+                }
+                .box form button {
+                    font-size: @font-size_main;
+                }     
+            }
+            .author {
+                font-size: @font-size_main;
             }
         }
     }
