--- a/src/styles/media-main-helpful.less
+++ b/src/styles/media-main-helpful.less
@@ -1,21 +1,48 @@
-@media all and (max-width: 599px) {
+@media (min-width: 540px) and (max-width: 760px) {
     body {
         #main { 
             .helpful {
                 .helpful-description {
                     .helpful-title{
-                        font-size: @font-size_main + 8px;//////////////////////////  
+                        font-size: @font-size_main + 8px;
                     }
                     .helpful-text {   
-                        padding: 20px 15px 0px 15px;///////////////////////////////
-                        font-size: @font-size_main - 3px;///////////////////////////////
+                        padding: 20px 15px 0px 15px;
+                        font-size: @font-size_main - 2px;
                     }
                 }
                 .helpful-section {
                     .helpful-section-menu {
                         a .menu-block-text {
                             .helpful-menu-text {
-                                font-size: @font-size_main - 3px;////////////////////////
+                                font-size: @font-size_main - 2px;
+                            }
+                        }     
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 539px) {
+    body {
+        #main { 
+            .helpful {
+                .helpful-description {
+                    .helpful-title{
+                        font-size: @font-size_main + 6px;
+                    }
+                    .helpful-text {   
+                        padding: 20px 15px 0px 15px;
+                        font-size: @font-size_main - 4px;
+                    }
+                }
+                .helpful-section {
+                    .helpful-section-menu {
+                        a .menu-block-text {
+                            .helpful-menu-text {
+                                font-size: @font-size_main - 3px;
                             }
                         }     
                     }
