--- a/src/styles/media-main-page-array-product-cards.less
+++ b/src/styles/media-main-page-array-product-cards.less
@@ -4,6 +4,7 @@
         #main { 
             .page-array-products-cards {
                 flex-direction: column;/////////////////////////////=============
+                padding-left: 0px;///////////////////=========
                 .section-filtr {
                     width: 100%;//////////////////////////=============
                     // width: 295px;/* основная ширина блока вильтр *//////////===============
@@ -11,9 +12,7 @@
                         width: 100%;///////////////////////////////===============
                         // width: 295px;/////////////////////////////////================
                         .caption-filtr-text {
-                            font-size: @font-size_main + 1px;///////////////========
-                            font-family: 'Roboto', sans-serif;/////////==========
-                            font-weight: 600;/////===========
+                            font-size: @font-size_main + 2px;///////////////========
                         }
                     }
                     .content-filtr {
@@ -31,6 +30,7 @@
         #main { 
             .page-array-products-cards {
                 flex-direction: column;/////////////////////////////=============
+                padding-left: 0px;///////////////////=========
                 .section-filtr {
                     width: 100%;//////////////////////////=============
                     // width: 295px;/* основная ширина блока вильтр *//////////===============
@@ -38,9 +38,9 @@
                     .caption-filtr {
                         width: 100%;///////////////////////////////===============
                         .caption-filtr-text {
-                            font-size: @font-size_main;/////////=======1
-                            font-family: 'Roboto', sans-serif;
-                            font-weight: 600;
+                            font-size: @font-size_main + 3px;/////////=======1
+                            // font-family: 'Roboto', sans-serif;
+                            // font-weight: 600;
                         }
                     }
                     .content-filtr {
