--- a/src/styles/media-main-pagination.less
+++ b/src/styles/media-main-pagination.less
@@ -1,4 +1,5 @@
-@media all and (max-width: 315px) {
+@media (min-width: 540px) and (max-width: 760px) {
+    @font-size_main: 15px;
     body {
         #main { 
             .pagination {
@@ -9,12 +10,12 @@
                                 height: 25px;
                                 line-height: 25px;
                                 min-width: 25px;
-                                font-size: @font-size_main - 1px;  
+                                font-size: @font-size_main;  
                             }   
                         }
                         .active {
                             .active-block {
-                                font-size: @font-size_main - 1px;
+                                font-size: @font-size_main + 1px;
                             }
                         }
                         .space {
@@ -23,7 +24,41 @@
                             min-width: 25px;  
                         }
                         a:hover div {
-                            font-size: @font-size_main;
+                            font-size: @font-size_main + 1px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width: 539px) {
+    @font-size_main: 13px;
+    body {
+        #main { 
+            .pagination {
+                .pagination-wrapper {
+                    .pagination-section {
+                        a {
+                            div {
+                                height: 25px;
+                                line-height: 25px;
+                                min-width: 25px;
+                                font-size: @font-size_main;  
+                            }   
+                        }
+                        .active {
+                            .active-block {
+                                font-size: @font-size_main + 1px;
+                            }
+                        }
+                        .space {
+                            height: 25px;
+                            line-height: 25px;
+                            min-width: 25px;  
+                        }
+                        a:hover div {
+                            font-size: @font-size_main + 1px;
                         }
                     }
                 }
