--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -81,8 +81,8 @@ body {
                     margin: -1px 0px 0px 0px;
                     transition: 0.8s linear;  
                 }
-                .label-flagua {
-                    background-image: url('../images/flagua.jpg');
+                .label-flageng {
+                    background-image: url('../images/flageng.jpg');
                     background-repeat:no-repeat;
                     background-size: 70% 60%;
                     background-position: 55% 50%; 
@@ -95,8 +95,8 @@ body {
                     background-position: 55% 50%; 
                     transition: 0.8s linear;
                 }
-                .label-flageng {
-                    background-image: url('../images/flageng.jpg');
+                .label-flagua {
+                    background-image: url('../images/flagua.jpg');
                     background-repeat:no-repeat;
                     background-size: 70% 60%;
                     background-position: 55% 50%;  
@@ -254,62 +254,9 @@ body {
                 } 
                 #logo { 
                     margin-left: 20px;
-                    margin-top: 90px;
+                    margin-top: -10px;
                     position: relative;
                     z-index: 88888;
-                    // a {  
-                    //     text-decoration: none;
-                    //     cursor: pointer;
-                    //     .block-logo {
-                    //         padding: 0;
-                    //         margin: 0;
-                           
-                    //         width: 200px;
-                    //         height: 220px;
-                    //         // background: red;
-                           
-                           
-                           
-                    //     }
-                    //     .block-logo {
-                    //         padding: 0;
-                    //         margin: 0;
-                    //         width: 300px;
-                    //         height: 170px;
-                            
-                    //         border-radius: 50%;
-                    //         border-left: 26px solid @color_blue_main;
-                    //         border-right: 26px solid @color_blue_main;
-                    //         border-bottom: 6px solid @color_yellow_main;
-                    //         border-top: 6px solid @color_yellow_main;
-                    //         margin: 50px 0 0 30px;
-                           
-                    //         position: relative;/* */
-                    //         background-image: url('../images/logo_1.png');
-                    //         // background-image: url('../images/49240.png');
-                    //         background-position: center;
-                    //         background-size: 345px 216px;
-                            
-                    //         background-repeat: no-repeat;
-                    //     }
-                    //     .block-logo::before {
-                    //         content: "";
-                    //         padding: 0;
-                    //         margin: 0;
-                    //         position: absolute;
-                    //         width: 100%;
-                    //         height: 100%;
-                    //         border-radius: 50%;
-                    //         border-left: 13px solid  @color_yellow_main;
-                    //         border-right: 13px solid  @color_yellow_main;
-                    //         border-bottom: 3px solid @color_blue_main;
-                    //         border-top: 3px solid @color_blue_main;
-                    //         margin: -3px 0 0 -13px; 
-                    //     }               
-                    // }
-
-
-
                     a {  
                         text-decoration: none;
                         cursor: pointer;
@@ -318,83 +265,44 @@ body {
                             margin: 0;
                             max-width: 350px;
                             height: 175px;
-                           
-                            // border-radius: 50%;
                             margin: 100px 0px 0 0px;
-                            
-                            // background-color: #fff;
-                            
                             background-image: url('../images/11-aaa-waaa.png');
-                            // background-size: 300px 250px;
                             background-size: 100% 100%;
                             background-repeat: no-repeat;
-
-                            // border-bottom: 4px solid @color_yellow_main;
-                            // .photo-logo {
-                            //     height: 40px;
-                            //     width: 100vw;
-                            //     margin-left: 8%;
-                            //     margin-top: 65px;
-                                
-                            // }
                             .block-logo-text {
                                 position: absolute;
-
-
-                                max-width: 350;
-                                height: 20px;
-                                line-height: 20px;
+                                max-width: 350px;
+                                height: 22px;
+                                // line-height: 22px;
                                 margin-top: 177px;
-                                margin-left: 0px;
-                                padding: 0 3px;
+                                margin-left: 4px;
+                                padding: 0px 3px 0px 3px;
                                 border-radius: 3px;
                                 background: @color_linear_main;
-                                // top: 27px;
-                                // left: 20px;
-                                
-
-
-                                // margin-left: -120px;
                                 .logo-text {
-                                    // color: @color_fon_logo;
                                     color: rgb(131, 131, 131);
                                     font-family: 'Roboto', sans-serif;
                                     font-weight: 900;
                                     font-size: @font-size_main - 1.5px;
                                     text-transform: uppercase;
-                                    
                                     display: flex;
                                     justify-content: space-between;
-                                    // display: inline-block;
-                                    // transform: scale(.5, 1);
-                                   
-                                    
+                                    position: relative;
+                                    top: 50%;
+                                    transform: translateY(-50%);   
                                 }
                             }  
-                        }
-                        // .block-logo::before {
-                        //             content: "";
-                        //             padding: 0;
-                        //             margin: 0;
-                        //             position: absolute;
-                        //             padding: 0;
-                        //             margin: 0;
-                        //             width: 300px;
-                        //             height: 169px;
-                        //             border-radius: 50%;
-                        //             border-bottom: 2px solid @color_blue_main;
-                        //             margin: -2px 0 0 0px; 
-                        // }                  
+                        }             
                     }
                 }
                 #search {
                     width: 100%;
                     position: relative;
-                    margin-top: 28px;
+                    margin-top: 45px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    z-index: 88888; 
+                    z-index: 88888;
                     .search-box {
                         padding: 0;
                         margin: 0;
