--- a/src/styles/main-crumbs.less
+++ b/src/styles/main-crumbs.less
@@ -16,8 +16,8 @@ body {
                     min-width: 1px;
                     a {
                         font-family: 'Roboto', sans-serif;
-                        font-weight: 400;
-                        font-size: @font-size_main - 3px;
+                        font-weight: 300;
+                        font-size: @font-size_main;
                         letter-spacing: 0px;
                         word-spacing: 3px;
                         color: @color_black_main;
