--- a/src/styles/main-page-array-product-cards.less
+++ b/src/styles/main-page-array-product-cards.less
@@ -2,13 +2,12 @@ body {
     #main { 
         .page-array-products-cards {
             display: flex;
-            // flex-wrap: wrap;
             width: 100%;
             max-width: 1260px;
             min-height: 1px;
             padding-left: 10px;
             .section-filtr {
-                width: 295px;/* основная ширина блока вильтр *///////////////////////////
+                width: 295px;/* основная ширина блока вильтр */
                 min-height: 1px;
                 padding: 0 10px 0 10px;
                 .caption-filtr {
@@ -28,19 +27,19 @@ body {
                         height: 3px;
                         width: 98%;
                         background: @color_linear_main;
-                        margin: 0px 0px 20px 0px;
+                        margin: 0px 0px 30px 0px;
                     }
                     .caption-filtr-text {
                         color: @color_black_main;
                         text-transform: uppercase;
-                        font-size: @font-size_main + 1px;
+                        font-size: @font-size_main + 2px;
                         font-family: 'Roboto', sans-serif;
-                        font-weight: 600;
+                        font-weight: 400;
                         letter-spacing: 0px;
                         word-spacing: 2px;
                         text-align: center;
                         padding-top: 0px;
-                        border-bottom: 3px solid @color_blue_main;
+                        border-bottom: 2px solid @color_blue_main;
                         position: relative;
                         margin-bottom: 5px;
                     }
@@ -48,7 +47,7 @@ body {
                         content: "";       
                         width: 50%;
                         height: 100%;
-                        border-bottom: 3px solid @color_yellow_main;
+                        border-bottom: 2px solid @color_yellow_main;
                         position: absolute;
                         left: 0px;
                     }
@@ -132,7 +131,7 @@ body {
                             }
                             .checkbox-ul {
                                 width: 100%;
-                                height: 105px;  /* приоткрытая высота блока checkbox */
+                                height: 110px;  /* приоткрытая высота блока checkbox */
                                 padding: 5px 0px 0px 5px;
                                 justify-content: space-around;
                                 overflow-y: scroll;
@@ -295,16 +294,15 @@ body {
                             }
                             .hide-all:checked ~ .radio-ul  {
                                 height: 100%;  
-                            }
-                            
-                            
+                            }    
                         }
                         .button-filtr {
                             display: flex;
                             flex-direction: column;
+                            align-items: center;
                             width: 100%;
                             min-height: 1px;
-                            padding: 5px 0px 10px 10px;
+                            padding: 5px 0px 10px 0px;////////////////////// 111111
                             button {
                                 margin: 0;
                                 padding: 0;
@@ -317,7 +315,7 @@ body {
                                 display: inline-block;
                                 cursor: pointer;
                                 height: 32px;
-                                width: 90%;
+                                width: 250px;//////////////////
                                 margin-top: 20px;
                                 padding: 7px;
                                 color: @color_white_main;
@@ -326,7 +324,7 @@ body {
                                 font-family: 'Roboto', sans-serif;
                                 font-weight: 500;
                                 position: relative;
-                                margin-left: 5px;
+                                // margin-left: 5px;////////////////11111
                             }
                             .button-reset:before{
                                 content: "Очистить фильтр";
@@ -335,7 +333,7 @@ body {
                                 height: 40px;
                                 line-height: 40px;
                                 position: absolute;
-                                left: -5px;
+                                left: -9px;
                                 top: -5px;
                             }
                             .button-submit:before{
@@ -345,7 +343,7 @@ body {
                                 height: 40px;
                                 line-height: 40px;
                                 position: absolute;
-                                left: -5px;
+                                left: -9px;
                                 top: -5px;
                                 box-sizing: border-box;
                             }
@@ -381,9 +379,9 @@ body {
                     .content1-description-title {
                         color: @color_black_main;
                         text-transform: uppercase;
-                        font-size: @font-size_main + 12px;
-                        font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;
+                        font-size: @font-size_main + 10px;
+                        font-family: 'Roboto', sans-serif;
+                        font-weight: 400;
                         letter-spacing: 0px;
                         word-spacing: 5px;
                         text-align: center;
@@ -398,19 +396,6 @@ body {
                         border-bottom: 3px solid @color_yellow_main;
                         position: absolute;
                     }
-                    // .content1-description-text {
-                    //     color: @color_black_main;
-                    //     text-indent: 30px;
-                    //     padding: 20px 40px 20px 40px;
-                    //     font-family: 'Roboto', sans-serif;
-                    //     font-weight: 300;
-                    //     font-size: @font-size_main;
-                    //     letter-spacing: 0px;
-                    //     word-spacing: 3px;
-                    //     margin: 0px 0px -15px 0px;
-                    //     padding-bottom: 40px;
-                    //     text-align:justify   
-                    // }
                 }
                 .content2-catalog-cards-products {
                     padding: 0;
@@ -509,7 +494,6 @@ body {
                                                 position: relative;
                                                 top: 50%;
                                                 transform: translateY(-50%);
-                                            
                                             } 
                                         }
                                     }  
@@ -565,7 +549,7 @@ body {
                                     .content2-block-base-brand {
                                         padding: 0;
                                         margin: 0;
-                                        color: @color_dlue_tone_two_main;
+                                        color: @color_dlue_tone_two_main * 1.3;
                                         text-transform: uppercase;
                                         font-size: @font-size_main - 1px;
                                         font-family: 'Roboto', sans-serif;
