--- a/src/styles/main-page-catalog-pdf.less
+++ b/src/styles/main-page-catalog-pdf.less
@@ -20,9 +20,9 @@ body {
                 .content1-description-title {
                     color: @color_black_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 12px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-size: @font-size_main + 10px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
                     word-spacing: 10px;
@@ -109,11 +109,10 @@ body {
                         transition: linear 0.5s;
                         .content2-catalog-text {
                             text-align: center;
-                            // padding: 5px 0px 4px 0px;
                             color: @color_white_main;
                             text-transform: uppercase;
                             font-family: 'Roboto', sans-serif;
-                            font-weight: 400;
+                            font-weight: 300;
                             font-size: @font-size_main;
                             letter-spacing: 0px;
                             word-spacing: 3px;
@@ -160,7 +159,7 @@ body {
                 .content3-list-title {
                     color: @color_dlue_dark_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 3px;
+                    font-size: @font-size_main + 7px;
                     font-family: 'Roboto', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
@@ -193,7 +192,7 @@ body {
                             justify-content: space-between;
                             text-align: center;
                             padding: 0px 10px;
-                            background: @color_linear_main;
+                            background: @color_linear_main * 1.03;
                             transition: linear 0.5s;
                             .list-block-text {
                                 min-width: 1px;
@@ -203,8 +202,8 @@ body {
                                     color: @color_blue_main;
                                     text-transform: uppercase;
                                     font-family: 'Roboto', sans-serif;
-                                    font-weight: 400;
-                                    font-size: @font-size_main - 1px;
+                                    font-weight: 300;
+                                    font-size: @font-size_main;
                                     letter-spacing: 0px;
                                     word-spacing: 3px;
                                     position: relative;
@@ -212,7 +211,8 @@ body {
                                     transform: translateY(-50%);
                                     transition: linear 0.3s;
                                     span {
-                                        font-size: @font-size_main - 17px;
+                                        display: none;
+                                        font-size: @font-size_main;
                                     }  
                                 }
                             }
