--- a/src/styles/main-page-general.less
+++ b/src/styles/main-page-general.less
@@ -3,13 +3,6 @@ body {
         .page-general { 
             padding: 0;
             margin: 0;
-            // display: flex;
-            // flex-direction: column;
-            // min-height: 830px;
-            // width: 100%;
-            // max-width: 1260px;
-            // background: @color_white_main;
-            // z-index: 11111;
             .content1-description {
                 padding: 0;
                 margin: 0;
@@ -29,9 +22,9 @@ body {
                 .content1-description-title {
                     color: @color_black_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 12px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-size: @font-size_main + 10px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
                     word-spacing: 10px;
@@ -121,7 +114,7 @@ body {
                             color: @color_white_main;
                             text-transform: uppercase;
                             font-family: 'Roboto', sans-serif;
-                            font-weight: 400;
+                            font-weight: 300;
                             font-size: @font-size_main;
                             letter-spacing: 0px;
                             word-spacing: 3px;
@@ -237,9 +230,9 @@ body {
                 .content4-description-title {
                     color: @color_black_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 12px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-size: @font-size_main + 10px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
                     word-spacing: 10px;
