--- a/src/styles/main-page-parts-list-pdf.less
+++ b/src/styles/main-page-parts-list-pdf.less
@@ -22,9 +22,9 @@ body {
                 .content1-description-title {
                     color: @color_black_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 12px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-size: @font-size_main + 10px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
                     word-spacing: 10px;
@@ -70,7 +70,7 @@ body {
                     text-transform: uppercase;
                     font-size: @font-size_main + 7px;
                     font-family: 'Roboto', sans-serif;
-                    font-weight: 500;
+                    font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 0px;
                     word-spacing: 10px;
@@ -112,7 +112,7 @@ body {
                                     text-transform: uppercase;
                                     font-family: 'Roboto', sans-serif;
                                     font-weight: 400;
-                                    font-size: @font-size_main - 1px;
+                                    font-size: @font-size_main;
                                     letter-spacing: 0px;
                                     word-spacing: 3px;
                                     position: relative;
@@ -120,7 +120,8 @@ body {
                                     transform: translateY(-50%);
                                     transition: linear 0.2s;
                                     span {
-                                        font-size: @font-size_main - 17px;
+                                        display: none;
+                                        font-size: @font-size_main;
                                     }  
                                 }
                             }
