--- a/src/styles/media-main-crumbs.less
+++ b/src/styles/media-main-crumbs.less
@@ -1,14 +1,29 @@
 
-
-@media all and (max-width: 760px) {
+@media (min-width: 540px) and (max-width: 760px) {
     body {
         #main { 
             .crumbs {
-                padding: 15px 30px 15px 30px;////////////////////////
+                padding: 15px 30px 15px 30px;
                 .crumbs-text {
                     li {
                         a {
-                            font-size: @font-size_main - 4px;//////////////////////// 
+                            font-size: @font-size_main - 2px; 
+                        }
+                    }  
+                }
+            }
+        }
+    }  
+}
+@media all and (max-width: 539px) {
+    body {
+        #main { 
+            .crumbs {
+                padding: 15px 30px 15px 30px;
+                .crumbs-text {
+                    li {
+                        a {
+                            font-size: @font-size_main - 4px;
                         }
                     }  
                 }
