--- a/src/styles/media-main-page-catalog-pdf.less
+++ b/src/styles/media-main-page-catalog-pdf.less
@@ -1,29 +1,38 @@
-@media all and (max-width: 727px) {
+@media (min-width: 540px) and (max-width: 727px) {
+    @font-size_main: 15px;
     body {
         #main {
             .page-catalog-pdf {
+                .content1-description {
+                    .content1-description-title {
+                        font-size: @font-size_main + 10px;
+                    }
+                    .content1-description-text {
+                        text-indent: 0px;
+                        padding: 20px 15px 20px 15px;
+                        font-size: @font-size_main;
+                        text-align: center;
+                    }
+                }
                 .content3-list {
                     .content3-list-title {  
-                        font-size: @font-size_main + 2px;
+                        font-size: @font-size_main + 7px;
                     }
                     .content3-list-section-wrapper {
                         height: 37px;
                         width: 95%;
-                        margin-top: 3px;
                         a {
                             .content3-list-section {
-                                width: 100%;
                                 height: 37px;
-                                padding: 0px 10px;
                                 .list-block-text {
-                                    min-width: 1px;
                                     height: 37px;
                                     .content3-list-text {
-                                        font-size: @font-size_main - 3px;
+                                        font-size: @font-size_main;
                                         span {
-                                            font-size: @font-size_main - 3px;
+                                            display: inline-block;
+                                            font-size: @font-size_main;
                                             text-transform: lowercase;
-                                            font-weight: 500;
+                                            font-weight: 400;
                                         }  
                                     }
                                 }
@@ -38,22 +47,53 @@
         }
     }
 }
-@media all and (max-width: 599px) {
+
+@media all and (max-width: 539px) {
+    @font-size_main: 13px;
     body {
         #main {
             .page-catalog-pdf {
                 .content1-description {
                     .content1-description-title {
-                        font-size: @font-size_main + 8px;
+                        font-size: @font-size_main + 10px;
                     }
                     .content1-description-text {
                         text-indent: 0px;
                         padding: 20px 15px 20px 15px;
-                        font-size: @font-size_main - 2px;
+                        font-size: @font-size_main;
                         text-align: center;
                     }
                 }
-            } 
+                .content3-list {
+                    .content3-list-title {  
+                        font-size: @font-size_main + 7px;
+                    }
+                    .content3-list-section-wrapper {
+                        height: 37px;
+                        width: 95%;
+                        a {
+                            .content3-list-section {
+                                height: 37px;
+                                .list-block-text {
+                                    height: 37px;
+                                    .content3-list-text {
+                                        font-size: @font-size_main;
+                                        span {
+                                            display: inline-block;
+                                            font-size: @font-size_main;
+                                            text-transform: lowercase;
+                                            font-weight: 400;
+                                        }  
+                                    }
+                                }
+                                .list-block-img {
+                                    display: none;
+                                }    
+                            }
+                        }  
+                    }   
+                }
+            }
         }
-    }   
+    }
 }
